Project

General

Profile

Actions

Bug #15941

closed

Issue with String#scrub when given block and receiver is modified in block

Bug #15941: Issue with String#scrub when given block and receiver is modified in block

Added by luke-gru (Luke Gruber) about 7 years ago. Updated about 7 years ago.

Status:
Closed
Assignee:
-
Target version:
-
[ruby-core:93252]

Description

This should cause a segmentation fault:

s = "abc\u3042\xE3\x80"
loop do
    s.scrub{|bytes| s << "more content"; "?" }
end

Not something that should happen, but I thought it might cause undesired behavior.
Thank you for your time :)


Files

scrub-modify-check.patch (3.82 KB) scrub-modify-check.patch jeremyevans0 (Jeremy Evans), 06/19/2019 05:47 PM

Updated by luke-gru (Luke Gruber) about 7 years ago Actions #1 [ruby-core:93253]

I guess the solution here would be something similar to String#gsub, with str_mod_check.

Updated by jeremyevans0 (Jeremy Evans) about 7 years ago Actions #2 [ruby-core:93256]

I can confirm this issue, and agree that handling it similarly to String#gsub makes sense. Attached is a patch that does that.

Updated by luke-gru (Luke Gruber) about 7 years ago Actions #3 [ruby-core:93260]

Patch lgtm, thanks!

Updated by jeremyevans (Jeremy Evans) about 7 years ago Actions #4

  • Status changed from Open to Closed

Applied in changeset git|0f283054e7f568f09fbfc952d57ea6daf4abbd88.


Check that String#scrub block does not modify receiver

Similar to the check used for String#gsub. Can fix possible
segfault.

Fixes [Bug #15941]

Actions

Also available in: PDF Atom