Check that String#scrub block does not modify receiver

Similar to the check used for String#gsub.  Can fix possible
segfault.

Fixes [Bug #15941]